# promptu

./: README.md  pyproject.toml
.github/workflows/: check.yml  release.yml
promptu/: __init__.py  natural_list.py  plural.py  truncate.py
templates/: CHANGELOG.md.j2
tests/: test_natural_list.py  test_plural.py  test_truncate.py
